v0.23.0
- MANTA-200 Add filter for overlapping diploid calls which can't be explained
as two haplotypes.
- MANTA-199 Fix low-frequency fragment/breakpoint mismatch (primarily
an issue when large numbers of short ref contigs were used)
- Add CRAM support for individual tools - still need a quick chrom depth estimator
for full workflow CRAM support
- c++11 update
- MANTA-185 remove transloc calls with neg position (from circular genome)
- [mantadev] #1 Fix SA split read breakpoint position
- MANTA-183 handle paired/single read mixture in input alignments
- MANTA-182 submit config on cmdline
v0.22.0
- MANTA-181 fix assembler path and coverage issues
- MANTA-177 filter redundant partial insertions
- MANTA-142 improve contig alignment for large events
- MANTA-160 add pseudo-coloring to assmembly, and improve multi-pass
read/contig association
- MANTA-170 improve pair allele support accuracy
- MANTA-139 add shadow and chimera reads into pair counts
v0.21.0
- MANTA-167 semi-mapped som pair correction
- MANTA-156 filter out assm poison reads
- MANTA-161 make assembly robust to seed k-mer selection
- MANTA-164 batch retrieve assembly mate reads
- MANTA-158 improve small indel contig alignment specificity
- MANTA-146 use MAPQ0 mate reads in assembly
- MANTA-48 use shadow reads for split scoring
- MANTA-157 improve shadow read filter
- MANTA-153 fix diploid prior
- MANTA-150 fix SV scoring size cutoff
- MANTA-148 check bam records for region errors
- RNA: rna-scoring
v0.20.1
- Lower default min candidate size to 8
v0.20.0
- MANTA-136 turn on conservative large insertion calling
- MANTA-126 multi-junction SV scoring
- MANTA-131 improve large somatic sv specificity with expanded
supporting evidence search
- RNA: track candidate orientation
v0.19.0
- MANTA-127 RG based insert stats (default off) 
- MANTA-128 Improved pair orientation estimation and error checks
- RNA: Improve fusion specificity
- MANTA-125 add experimental large insertion calling (default off)