@@ -1,3 +1,4 @@
+- MANTA-195 Improve filtration of short fragments in FFPE samples
 v0.23.0
 - MANTA-200 Add filter for overlapping diploid calls which can't be explained
 as two haplotypes.
